--- a/app/translations/zh/LC_MESSAGES/messages.po
+++ b/app/translations/zh/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2021-10-13 22:30+1100\n"
+"POT-Creation-Date: 2021-10-21 00:38+1100\n"
 "PO-Revision-Date: 2021-10-08 18:08+1100\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: zh\n"
@@ -18,128 +18,9 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
 
-#: app/__init__.py:22
+#: app/__init__.py:21
 msgid "Please login to access this page."
 msgstr "请登陆访问此页"
-
-#: app/email.py:22
-msgid "[Microblog] Reset Your Password"
-msgstr "[Microblog] 重置您的密码"
-
-#: app/forms.py:9 app/forms.py:27 app/forms.py:45
-msgid "Username"
-msgstr "用户名"
-
-#: app/forms.py:10 app/forms.py:21 app/forms.py:29
-msgid "Password"
-msgstr "密码"
-
-#: app/forms.py:11
-msgid "Remember Me"
-msgstr "记住我"
-
-#: app/forms.py:12 app/routes.py:58 app/templates/login.html:5
-msgid "Sign In"
-msgstr "登陆"
-
-#: app/forms.py:16 app/forms.py:28
-msgid "Email"
-msgstr "邮箱"
-
-#: app/forms.py:17 app/forms.py:23
-msgid "Request Password Reset"
-msgstr "申请重置密码"
-
-#: app/forms.py:22 app/forms.py:30
-msgid "Repeat Password"
-msgstr "重复密码"
-
-#: app/forms.py:31 app/routes.py:110 app/templates/register.html:5
-msgid "Register"
-msgstr "注册"
-
-#: app/forms.py:36 app/forms.py:57
-msgid "Please use a different username."
-msgstr "请使用一个不同的用户名"
-
-#: app/forms.py:41
-msgid "Please use a different email address."
-msgstr "请使用一个不同的邮箱"
-
-#: app/forms.py:46
-msgid "About me"
-msgstr "关于我"
-
-#: app/forms.py:47 app/forms.py:61 app/forms.py:67
-msgid "Submit"
-msgstr "提交"
-
-#: app/forms.py:65
-msgid "Say something"
-msgstr "说点什么"
-
-#: app/routes.py:28
-msgid "Your post is now live!"
-msgstr "您的帖子现已发布！"
-
-#: app/routes.py:38
-msgid "Home Page"
-msgstr "主页"
-
-#: app/routes.py:51
-msgid "Invalid username or password"
-msgstr "无效的用户名或密码 "
-
-#: app/routes.py:76
-msgid "Check your email for the instruction to reset your password"
-msgstr "检查您的电子邮件以获取重置密码的说明"
-
-#: app/routes.py:79 app/templates/reset_password_request.html:5
-msgid "Reset Password"
-msgstr "重设密码"
-
-#: app/routes.py:93
-msgid "Your password has been reset."
-msgstr "您的密码已重置"
-
-#: app/routes.py:108
-msgid "Congratulations, you are now a registered user!"
-msgstr "恭喜您，您现在是注册用户 "
-
-#: app/routes.py:145
-msgid "Your changes have been saved."
-msgstr "你的修改已被保存。"
-
-#: app/routes.py:150 app/templates/edit_profile.html:5
-msgid "Edit Profile"
-msgstr "编辑个人资料"
-
-#: app/routes.py:160 app/routes.py:180
-#, python-format
-msgid "User %(username)s not found."
-msgstr "未找到用户 %(username)s"
-
-#: app/routes.py:163
-msgid "You canno follow yourself!"
-msgstr "您不能关注自己！"
-
-#: app/routes.py:167
-#, python-format
-msgid "You are following %(username)s!"
-msgstr "您正在关注 %(username)s！"
-
-#: app/routes.py:183
-msgid "You cannot unfollow yourself!"
-msgstr "您不能取消关注自己！"
-
-#: app/routes.py:187
-#, python-format
-msgid "You are not following %(username)s."
-msgstr "您没有关注 %(username)s"
-
-#: app/routes.py:203 app/templates/base.html:22
-msgid "Explore"
-msgstr "探索"
 
 #: app/translate.py:10
 msgid "Error: the translation service is not configured."
@@ -149,21 +30,130 @@ msgstr "错误：未配置翻译服务。"
 msgid "Error: the translation service failed."
 msgstr "错误：翻译服务失败。"
 
-#: app/templates/404.html:4
-msgid "Not Found"
-msgstr "未找到"
+#: app/auth/email.py:8
+msgid "[Microblog] Reset Your Password"
+msgstr "[Microblog] 重置您的密码"
 
-#: app/templates/404.html:5 app/templates/500.html:6
-msgid "Back"
-msgstr "返回"
+#: app/auth/forms.py:9 app/auth/forms.py:27 app/main/forms.py:10
+msgid "Username"
+msgstr "用户名"
 
-#: app/templates/500.html:4
-msgid "An unexpected error has occured"
-msgstr "发生了一个意外的错误 "
+#: app/auth/forms.py:10 app/auth/forms.py:21 app/auth/forms.py:29
+msgid "Password"
+msgstr "密码"
 
-#: app/templates/500.html:5
-msgid "The administrator has been notified. Sorry for the inconvenience!"
-msgstr "已通知管理员。 带来不便敬请谅解！"
+#: app/auth/forms.py:11
+msgid "Remember Me"
+msgstr "记住我"
+
+#: app/auth/forms.py:12 app/auth/routes.py:27 app/templates/auth/login.html:5
+msgid "Sign In"
+msgstr "登陆"
+
+#: app/auth/forms.py:16 app/auth/forms.py:28
+msgid "Email"
+msgstr "邮箱"
+
+#: app/auth/forms.py:17 app/auth/forms.py:23
+msgid "Request Password Reset"
+msgstr "申请重置密码"
+
+#: app/auth/forms.py:22 app/auth/forms.py:30
+msgid "Repeat Password"
+msgstr "重复密码"
+
+#: app/auth/forms.py:31 app/auth/routes.py:79
+#: app/templates/auth/register.html:5
+msgid "Register"
+msgstr "注册"
+
+#: app/auth/forms.py:36 app/main/forms.py:22
+msgid "Please use a different username."
+msgstr "请使用一个不同的用户名"
+
+#: app/auth/forms.py:41
+msgid "Please use a different email address."
+msgstr "请使用一个不同的邮箱"
+
+#: app/auth/routes.py:20
+msgid "Invalid username or password"
+msgstr "无效的用户名或密码 "
+
+#: app/auth/routes.py:45
+msgid "Check your email for the instruction to reset your password"
+msgstr "检查您的电子邮件以获取重置密码的说明"
+
+#: app/auth/routes.py:48 app/templates/auth/reset_password_request.html:5
+msgid "Reset Password"
+msgstr "重设密码"
+
+#: app/auth/routes.py:62
+msgid "Your password has been reset."
+msgstr "您的密码已重置"
+
+#: app/auth/routes.py:77
+msgid "Congratulations, you are now a registered user!"
+msgstr "恭喜您，您现在是注册用户 "
+
+#: app/main/forms.py:11
+msgid "About me"
+msgstr "关于我"
+
+#: app/main/forms.py:12 app/main/forms.py:26 app/main/forms.py:32
+msgid "Submit"
+msgstr "提交"
+
+#: app/main/forms.py:30
+msgid "Say something"
+msgstr "说点什么"
+
+#: app/main/forms.py:36 app/main/routes.py:156
+#, fuzzy
+msgid "Search"
+msgstr "搜索"
+
+#: app/main/routes.py:26
+msgid "Your post is now live!"
+msgstr "您的帖子现已发布！"
+
+#: app/main/routes.py:36
+msgid "Home Page"
+msgstr "主页"
+
+#: app/main/routes.py:74
+msgid "Your changes have been saved."
+msgstr "你的修改已被保存。"
+
+#: app/main/routes.py:79 app/templates/edit_profile.html:5
+msgid "Edit Profile"
+msgstr "编辑个人资料"
+
+#: app/main/routes.py:89 app/main/routes.py:109
+#, python-format
+msgid "User %(username)s not found."
+msgstr "未找到用户 %(username)s"
+
+#: app/main/routes.py:92
+msgid "You canno follow yourself!"
+msgstr "您不能关注自己！"
+
+#: app/main/routes.py:96
+#, python-format
+msgid "You are following %(username)s!"
+msgstr "您正在关注 %(username)s！"
+
+#: app/main/routes.py:112
+msgid "You cannot unfollow yourself!"
+msgstr "您不能取消关注自己！"
+
+#: app/main/routes.py:116
+#, python-format
+msgid "You are not following %(username)s."
+msgstr "您没有关注 %(username)s"
+
+#: app/main/routes.py:132 app/templates/base.html:22
+msgid "Explore"
+msgstr "探索"
 
 #: app/templates/_post.html:14
 #, python-format
@@ -182,19 +172,19 @@ msgstr "欢迎来到 Microblog"
 msgid "Home"
 msgstr "主页"
 
-#: app/templates/base.html:26
+#: app/templates/base.html:35
 msgid "Login"
 msgstr "登陆"
 
-#: app/templates/base.html:28
+#: app/templates/base.html:37
 msgid "Profile"
 msgstr "个人资料"
 
-#: app/templates/base.html:29
+#: app/templates/base.html:38
 msgid "Logout"
 msgstr "登出"
 
-#: app/templates/base.html:66
+#: app/templates/base.html:75
 msgid "Error: Could not contact server."
 msgstr "错误：无法联系服务器。"
 
@@ -211,25 +201,17 @@ msgstr "较新的帖子"
 msgid "Older posts"
 msgstr "较旧的帖子"
 
-#: app/templates/login.html:12
-msgid "New User? "
-msgstr "新用户？"
+#: app/templates/search.html:4
+msgid "Search Results"
+msgstr "搜索结果"
 
-#: app/templates/login.html:12
-msgid "Click to Register!"
-msgstr "点击注册！"
+#: app/templates/search.html:13
+msgid "Previous results"
+msgstr "以前的结果"
 
-#: app/templates/login.html:14
-msgid "Forgot Your Password?"
-msgstr "忘记密码？"
-
-#: app/templates/login.html:15
-msgid "Click to Reset It"
-msgstr "点击重置"
-
-#: app/templates/reset_password.html:5
-msgid "Reset Your Password"
-msgstr "重置您的密码"
+#: app/templates/search.html:18
+msgid "Next results"
+msgstr "之后的结果"
 
 #: app/templates/user.html:8
 msgid "User"
@@ -260,4 +242,40 @@ msgstr "关注"
 #: app/templates/user.html:25
 msgid "Unfollow"
 msgstr "取消关注"
+
+#: app/templates/auth/login.html:12
+msgid "New User? "
+msgstr "新用户？"
+
+#: app/templates/auth/login.html:12
+msgid "Click to Register!"
+msgstr "点击注册！"
+
+#: app/templates/auth/login.html:14
+msgid "Forgot Your Password?"
+msgstr "忘记密码？"
+
+#: app/templates/auth/login.html:15
+msgid "Click to Reset It"
+msgstr "点击重置"
+
+#: app/templates/auth/reset_password.html:5
+msgid "Reset Your Password"
+msgstr "重置您的密码"
+
+#: app/templates/errors/404.html:4
+msgid "Not Found"
+msgstr "未找到"
+
+#: app/templates/errors/404.html:5 app/templates/errors/500.html:6
+msgid "Back"
+msgstr "返回"
+
+#: app/templates/errors/500.html:4
+msgid "An unexpected error has occured"
+msgstr "发生了一个意外的错误 "
+
+#: app/templates/errors/500.html:5
+msgid "The administrator has been notified. Sorry for the inconvenience!"
+msgstr "已通知管理员。 带来不便敬请谅解！"
 
