--- a/app/translations/zh/LC_MESSAGES/messages.po
+++ b/app/translations/zh/LC_MESSAGES/messages.po
@@ -31,8 +31,8 @@ msgid "Error: the translation service failed."
 msgstr "错误：翻译服务失败。"
 
 #: app/auth/email.py:8
-msgid "[Microblog] Reset Your Password"
-msgstr "[Microblog] 重置您的密码"
+msgid "[Naked Wrestling Club] Reset Your Password"
+msgstr "[Naked Wrestling Club] 重置您的密码"
 
 #: app/auth/forms.py:9 app/auth/forms.py:27 app/main/forms.py:10
 msgid "Username"
@@ -188,8 +188,8 @@ msgid "Translate"
 msgstr "翻译"
 
 #: app/templates/base.html:4
-msgid "Welcome to Microblog"
-msgstr "欢迎来到 Microblog"
+msgid "Welcome to Naked Wrestling Club"
+msgstr "欢迎来到 Naked Wrestling Club"
 
 #: app/templates/base.html:21
 msgid "Home"
